fix social align

--- a/src/components/social/socila-style.css
+++ b/src/components/social/socila-style.css
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border-radius: 50px;
+    border-radius: 30px;
     background-color: var(--white-color);
     padding: 5px 0;
     width: 110px;
 }
 
-
+.navbar__social-link{
+    display: flex;
+}
 .navbar__social-item {
     width: 25px;
     height: 25px;
